--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-copy": "0.0.2",
     "gulp-stylus": "~1.3.4",
     "nib": "~1.0.4",
+    "socket.io-client": "^1.2.1",
     "vinyl-source-stream": "~1.0.0"
   }
 }
