--- a/package.json
+++ b/package.json
@@ -16,11 +16,6 @@
     "url": "https://github.com/mlt-meetup/countdown/issues"
   },
   "homepage": "https://github.com/mlt-meetup/countdown",
-  "browserify": {
-    "transform": [
-      "debowerify"
-    ]
-  },
   "devDependencies": {
     "browser-sync": "~1.7.2",
     "browserify": "~7.0.0",
@@ -30,6 +25,7 @@
     "gulp-assemble": "~0.1.8",
     "gulp-copy": "0.0.2",
     "gulp-stylus": "~1.3.4",
+    "jquery": "^2.1.1",
     "nib": "~1.0.4",
     "socket.io-client": "^1.2.1",
     "vinyl-source-stream": "~1.0.0"
