--- a/theme-sources/2014-12/package.json
+++ b/theme-sources/2014-12/package.json
@@ -17,18 +17,20 @@
     "url": "https://github.com/mlt-meetup/countdown/issues"
   },
   "homepage": "https://github.com/mlt-meetup/countdown",
+  "dependencies": {
+    "jquery": "^2.1.1",
+    "socket.io-client": "^1.2.1",
+    "component-emitter": "git://github.com/component/emitter"
+  },
   "devDependencies": {
     "browser-sync": "~1.7.2",
     "browserify": "~7.0.0",
-    "component-emitter": "git://github.com/component/emitter",
     "debowerify": "~1.2.0",
     "gulp": "~3.8.10",
     "gulp-assemble": "~0.1.8",
     "gulp-copy": "0.0.2",
     "gulp-stylus": "~1.3.4",
-    "jquery": "^2.1.1",
     "nib": "~1.0.4",
-    "socket.io-client": "^1.2.1",
     "vinyl-source-stream": "~1.0.0"
   }
 }
